--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- AUDIO TAG -->
+    <!-- controls provide interface to control the audio -->
+    <!-- autoplay helps that it doesnt need to be manually started -->
+    <!-- loop once the audio is complete it restart the audio again -->
+    <audio controls autoplay loop>
+        <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+    </audio>
+
     
 </body>
 </html>
