--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
         <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
     </audio>
 
-    
+    <!-- VIDEO TAG -->
+    <!-- controls provide controls for video like play pause -->
+    <!-- loop muted autoplay="autoplay" keeps playing the video -->
+    <!-- loop muted autoplay="autoplay" control keeps playing the video and provide controlers-->
+    <video controls width="450px">
+        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+    </video>
+
+    <video  width="450px" loop muted autoplay="autoplay" controls>
+        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+    </video>
+
+    <video poster="D:\IMG_20230702_181622.jpg" width="450px" loop muted autoplay="autoplay" controls>
+        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+    </video>
+
 </body>
 </html>
